trunk Mifos instance was getting an exception:
  java.lang.OutOfMemoryError: PermGen space

Jeff and I decided to try 128 megabytes of max permgen space. The
PermGenOutOfMemory wiki page recommends 256 megabytes, but I used 128 instead
to try and conserve memory on birch.

See: http://www.mifos.org/developers/wiki/PermGenOutOfMemory

Also, I don't recall why -Xmx512m is in there, possibly to limit the heap space
since we have many Java VMs running.

Note that all trunk-deploy* instances at https://ci.mifos.org/hudson/ use this
control script.


git-svn-id: https://mifos.svn.sourceforge.net/svnroot/mifos/trunk@15817 a8845c50-7012-0410-95d3-8e1449b9b1e4